tests rules_jvm: refactor dep-graph to support graph data snapshots; extract string enumerator common logic
GitOrigin-RevId: 9603f9486d54933644cf73fc20c27587bc15b2e7